--- a/examples/deeplab/style.css
+++ b/examples/deeplab/style.css
@@ -9,9 +9,10 @@ video {
 .seg-map {
   position: absolute;
   max-width: 100%;
-  opacity: 0.8;
+  opacity: 0.6;
+  z-index: 100;
 }
-.seg-label:hover {
+.seg-label.highlight {
   color: #0070c9;
   background: #f2f2f2;
 }
@@ -19,12 +20,38 @@ video {
   margin-right: 5px;
 }
 .seg-label {
-  padding: 3px 10px 5px 10px;
+  transition: color .1s ease-in, background-color .1s ease-in;
+  padding: 3px 10px 3px 10px;
+  border-radius: 15px;
+  height: 30px;
+  font-variant: small-caps;
 }
 .image-wrapper {
   max-height: 513px;
   max-width: 513px;
   position: relative;
+  display: inline-block;
+}
+.image-wrapper.show img,
+.image-wrapper.show div {
+  pointer-events: none
+}
+.overlay {
+  transition: opacity .1s ease-in-out;
+  background-color: rgba(0,0,0,0.3);
+  color: rgba(255,255,255,0.6);
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  opacity: 0;
+  font-size: 10em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.image-wrapper.show .overlay {
+  opacity: 1;
+  z-index: 999 !important;
 }
 .progress-label {
   float: left;
@@ -38,4 +65,16 @@ video {
 }
 .top-margin {
   margin-top:10px;
+}
+.dropdown-item {
+  cursor: pointer;
+}
+.netron-link {
+  color: #fff;
+}
+.dropdown-item:hover .netron-link {
+  color: #ccc;
+}
+.netron-link:hover {
+  color: #169bd7 !important;
 }
