--- a/examples/deeplab/style.css
+++ b/examples/deeplab/style.css
@@ -1,4 +1,11 @@
-#image,
+#image {
+  max-width: 100%;
+  max-height: 513px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+}
 video {
   max-width: 100%;
   max-height: 513px;
@@ -18,18 +25,9 @@ video {
 .image-wrapper.show div {
   pointer-events: none
 }
-.overlay {
-  transition: opacity .1s ease-in-out;
-  background-color: rgba(0,0,0,0.3);
-  color: rgba(255,255,255,0.6);
-  height: 100%;
-  width: 100%;
+.credit {
   position: absolute;
-  opacity: 0;
-  font-size: 10em;
-  display: none;
-  flex-direction: column;
-  justify-content: center;
+  bottom: 0;
 }
 .image-wrapper.show .overlay {
   opacity: 1;
@@ -65,7 +63,7 @@ video {
   -webkit-appearance: none;
   appearance: none;
   width: 100%;
-  height: 4px;
+  height: 3px;
   border-radius: 2px;
   background: #d3d3d3;
   outline: none;
@@ -81,21 +79,24 @@ video {
   appearance: none;
   width: 20px;
   height: 20px;
+  border: 1px solid #777;
   border-radius: 10px;
-  background: #777;
+  background: #fff;
   cursor: pointer;
 }
-
 .slider::-moz-range-thumb {
   width: 20px;
   height: 20px;
-  background: #4CAF50;
+  border: 1px solid #777;
+  border-radius: 10px;
+  background: #fff;
   cursor: pointer;
 }
 .controls {
   font-size: 9px;
 }
 .controls .label {
+  width: 100%;
   margin: 20px 0 8px 0;
 }
 .controls .btn-group {
@@ -105,10 +106,10 @@ video {
 .controls .btn-group * {
   color: #fff;
   background-color: #777;
-  font-size: 10px;
+  font-size: 9px;
 }
 .controls .btn-group .btn {
-  width: 33%;
+  width: 24%;
 }
 .effects-select label:nth-child(1) {
   border-radius: 3px !important;
@@ -120,7 +121,9 @@ video {
 .blur-wrapper,
 .color-picker-wrapper,
 .labels-wrapper,
-.color-map-alpha-wrapper {
+.color-map-alpha-wrapper,
+.refine-edge-wrapper,
+.select-bg-wrapper {
   display: none;
 }
 .controls[data-select="blur"] .blur-wrapper {
@@ -131,6 +134,12 @@ video {
 }
 .controls[data-select="label"] .labels-wrapper,
 .controls[data-select="label"] .color-map-alpha-wrapper {
+  display: flex;
+}
+.controls:not([data-select="label"]) .refine-edge-wrapper {
+  display: flex;
+}
+.controls[data-select="image"] .select-bg-wrapper {
   display: flex;
 }
 .labels-wrapper {	
@@ -150,4 +159,7 @@ video {
   border-radius: 15px;
   height: 30px;
   font-variant: small-caps;
+}
+.select-bg-wrapper .btn {
+  width: 100%;
 }
