--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -357,7 +357,7 @@ a:hover {
 }
 
 #header .social-nav a:hover {
-  color: rgba(255, 255, 255, 0.75);
+  color: rgba(255, 255, 255, 0.70);
 }
 
 
@@ -453,7 +453,7 @@ a:hover {
 .nav-menu a:hover,
 .nav-menu li:hover>a,
 .nav-menu .menu-active>a {
-  color: rgba(255, 255, 255, 0.75);
+  color: rgba(255, 255, 255, 0.70);
 }
 
 .nav-menu ul {
@@ -975,7 +975,7 @@ footer {
 
 #ictitle {
   color: rgba(25, 190, 225, 1.0);;
-  text-transform: uppercase;
+  text-transform: capitalize;
   font-size: 1.4em;
   letter-spacing: 0.1em;
   text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
@@ -1067,6 +1067,7 @@ footer {
 
 .ir {
   color: rgba(25, 190, 225, 1.0);
+  text-transform: lowercase;
 }
 
 /* #image {
@@ -1152,6 +1153,99 @@ video {
   text-align: center;
   max-width: 470px;
   max-height: 280px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  margin-top: -2rem;
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), inset 0 0 1px 0 rgba(255, 255, 255, 1);
+}
+
+video.fullscreen {
+  position: fixed;
+  left: 0; 
+  bottom: 0;
+  min-width: 100%; 
+  min-height: 100%;
+  width: auto; 
+  height: auto;
+  object-fit: fill;
+  z-index: 2999;
+  margin-top: 0;
+  border: 0px;
+}
+
+.fullscreen, .fullscreen .ir {
+  color: rgba(255, 255, 255, 0.70); 
+}
+
+.fullscreen .table thead th {
+  border-bottom: 1px solid rgba(25, 190, 225, 0.2);
+}
+
+#fps.fullscreen {
+  display: inline-block;
+  width: 120px;
+  position: fixed;
+  left: auto !important;
+  right: 6rem;
+  top: 2rem;
+  font-size: 1.2rem;
+  z-index: 3002;
+  color: rgba(255, 255, 255, 0.70); 
+}
+
+#fullscreen i.fullscreen svg {
+  display: inline-block;
+  position: fixed;
+  left: auto !important;
+  right: 2rem;
+  top: 2rem;
+  cursor: pointer;
+  z-index: 3003;
+  color: rgba(255, 255, 255, 0.70); 
+}
+
+#ictitle.fullscreen {
+  position: fixed;
+  left: auto !important;
+  right: 2rem;
+  font-size: 1.0rem;
+  top: 5rem;
+  text-transform:capitalize;
+  z-index: 3004;
+  color: rgba(255, 255, 255, 0.70);
+}
+
+#inference.fullscreen {
+  width: 30%;
+  position: fixed;
+  left: auto !important;
+  right: 2rem;
+  font-size: 1.0rem;
+  top: 7rem;
+  z-index: 3005;
+  padding-top: 1rem;
+  background-color: rgba(255, 255, 255,.03);
+  color: rgba(255, 255, 255, 0.70);
+}
+
+@media (max-width: 768px) {
+  #inference.fullscreen {
+    width: 100%;
+    top: 10rem;
+    right: 0rem;
+  }
+} 
+
+.video-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,.7);
+  z-index: 2;
+  .overlay-off & {
+    z-index: 0;
+  }
 }
 
 @media (max-width: 768px) {
@@ -1160,10 +1254,41 @@ video {
   }
 } 
 
+#fps {
+  display: inline-block;
+  position: relative;
+  left: 0px;
+  top: 4rem;
+  font-size: 1.2rem;
+  color: rgba(255, 255, 255, 0.4); 
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+  font-weight: 200;
+}
+
+
+#fullscreen i svg {
+  display: inline-block;
+  position: relative;
+  left:120px;
+  top: 2rem;
+  width: 30px;
+  height: 30px;
+  color: rgba(255, 255, 255, 0.4); 
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+  z-index: 3000;
+}
+
+#fullscreen i svg:hover {
+  color: rgba(25, 190, 225, 1.0); 
+  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
+}
+
 #inferenceTime {
   display: inline-block;
   text-align: center;
   margin: 0px auto;
+  text-transform: capitalize;
 }
 
 @media (min-width: 1200px) {
@@ -1221,22 +1346,6 @@ button.xclose {
 }
 .xclose:hover {
   color: rgba(255, 255, 255, 1.0);
-}
-
-video {
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  margin-top: -2rem;
-  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), inset 0 0 1px 0 rgba(255, 255, 255, 1);
-}
-
-#fps {
-  position: relative;
-  left: 0px;
-  top: 2rem;
-  font-size: 1.2rem;
-  color: rgba(255, 255, 255, 0.4); 
-  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
-  font-weight: 200;
 }
 
 .hide {
