--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -1189,7 +1189,7 @@ video {
   max-width: 470px;
   max-height: 280px;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  margin-top: -2rem;
+  margin-top: -1.25rem;
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), inset 0 0 1px 0 rgba(255, 255, 255, 1);
 }
 
@@ -1216,6 +1216,22 @@ video.fullscreen {
   border-bottom: 1px solid rgba(25, 190, 225, 0.2);
 }
 
+
+#fps {
+  color: rgba(255, 255, 255, 0.9);
+  background: rgba(25, 190, 225, 0.9);
+  display: inline-block;
+  text-align: center;
+  padding: 0.2rem 1rem;
+  border-radius: 15px;
+  text-shadow: 1px 2px 3px rgba(25, 190, 225, 0.5), 0 0 0 rgba(255, 255, 255, 0.5), 1px 2px 3px rgba(25, 190, 225, 0.5);
+}
+
+#fps:hover {
+  color: rgba(255, 255, 255, 1.0);
+  background: rgba(25, 190, 225, 1.0);
+}
+
 #fps.fullscreen {
   display: inline-block;
   width: 120px;
@@ -1225,7 +1241,14 @@ video.fullscreen {
   top: 2rem;
   font-size: 1.2rem;
   z-index: 3002;
-  color: rgba(255, 255, 255, 0.70);
+  border-radius: 0px;
+  color: rgba(255, 255, 255, 0.7);
+  background: rgba(25, 190, 225, 0.7);
+}
+
+#fps.fullscreen:hover {
+  color: rgba(255, 255, 255, 0.9);
+  background: rgba(25, 190, 225, 0.9);
 }
 
 #fullscreen i.fullscreen svg {
@@ -1290,21 +1313,15 @@ video.fullscreen {
   }
 }
 
-#fps {
-  display: inline-block;
-  position: relative;
-  left: 0px;
-  top: 4rem;
-  font-size: 1.2rem;
-  color: rgba(255, 255, 255, 0.4);
-  text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.2);
-  font-weight: 200;
+#fullscreen i {
+  display: block;
+  max-width: 100vw;
+  text-align: left;
 }
-
 #fullscreen i svg {
   display: inline-block;
   position: relative;
-  left: 120px;
+  left: 74%;
   top: 2rem;
   width: 30px;
   height: 30px;
@@ -1320,10 +1337,8 @@ video.fullscreen {
 }
 
 #inferenceTime {
-  display: inline-block;
-  text-align: center;
-  margin: 0px auto;
   text-transform: capitalize;
+  width: 100%;
 }
 
 @media (min-width: 1200px) {
