[example] UI update for PoseNet

--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -1097,19 +1097,6 @@ footer {
   text-transform: lowercase;
 }
 
-/* #image {
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 10px;
-  box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.05);
-  max-width: 50vw;
-}
-
-@media (max-width: 768px) {
-  #image {
-    max-width: 100%;
-  }
-} */
-
 .item {
   list-style-type: none;
   position: relative;
@@ -1193,7 +1180,7 @@ video {
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), inset 0 0 1px 0 rgba(255, 255, 255, 1);
 }
 
-video.fullscreen {
+video.fullscreen, #canvasvideo.fullscreen {
   position: fixed;
   left: 0;
   bottom: 0;
@@ -1217,7 +1204,7 @@ video.fullscreen {
 }
 
 
-#fps {
+#fps, .obv {
   color: rgba(255, 255, 255, 0.9);
   background: rgba(25, 190, 225, 0.9);
   display: inline-block;
@@ -1227,7 +1214,7 @@ video.fullscreen {
   text-shadow: 1px 2px 3px rgba(25, 190, 225, 0.5), 0 0 0 rgba(255, 255, 255, 0.5), 1px 2px 3px rgba(25, 190, 225, 0.5);
 }
 
-#fps:hover {
+#fps:hover, .obv:hover {
   color: rgba(255, 255, 255, 1.0);
   background: rgba(25, 190, 225, 1.0);
 }
@@ -1283,6 +1270,23 @@ video.fullscreen {
   z-index: 3005;
   padding-top: 1rem;
   background-color: rgba(255, 255, 255, .03);
+  color: rgba(255, 255, 255, 0.70);
+}
+
+#posenet #inference.fullscreen {
+  background-color: transparent;
+  top: 4rem;
+  right: 1rem;
+  font-weight: 200;
+}
+
+#my-gui-container.fullscreen {
+  position: fixed;
+  right: 2rem;
+  font-size: 0.8rem;
+  top: 8rem;
+  text-transform: capitalize;
+  z-index: 3006;
   color: rgba(255, 255, 255, 0.70);
 }
 
@@ -1550,6 +1554,267 @@ button.xclose {
   font-size: 1rem;
   font-weight: 100;
 }
+
+#posenet canvas {
+  width: 100%;
+  height: 100%;
+  display: block; 
+  margin-bottom: 0.5rem;
+}
+
+#posenet #canvasvideo {
+  width: 40%;
+  height: 40%;
+  text-align: center;
+  margin: 0px auto;
+  margin-top: -1rem;
+}
+
+#posenet #fullscreen i svg {
+  left: 66%;
+  top: 2.2rem;
+}
+
+#posenet .close-button {
+  display: none;
+}
+
+#posenet #my-gui-container ul {
+  margin: 0px;
+  padding: 0px;
+  text-transform: capitalize;
+}
+
+#posenet #my-gui-container ul li {
+  list-style: none;
+  display: inline-block;
+  text-align: left;
+  margin: 0 0.5rem 0.1rem 0;
+}
+
+#posenet #my-gui-container ul li.folder {
+  margin-right: 0;
+}
+
+#posenet #my-gui-container ul li span {
+  margin-right: 0.5rem;
+}
+
+#posenet #my-gui-container ul li .title {
+  display: none;
+}
+
+#posenet #my-gui-container ul li input {
+  width: 40px;
+  border: 1px solid rgba(255, 111, 97, 0.1);
+  padding: 2px 6px;
+  background: transparent;
+}
+
+#posenet #my-gui-container ul li input:hover {
+  border: 1px solid rgba(255, 111, 97, 0.2);
+  background: rgba(255, 111, 97, 0.2);
+}
+
+#posenet #my-gui-container.fullscreen #gui {
+  padding: 1rem 1rem;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+#posenet #my-gui-container.fullscreen .title {
+  margin-bottom: 0.2rem;
+}
+
+#posenet #my-gui-container.fullscreen ul li  {
+  display: block;
+}
+
+#posenet #my-gui-container.fullscreen ul li .title {
+  display: none;
+}
+
+#posenet #my-gui-container.fullscreen ul li input {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.6);
+}
+
+#posenet #my-gui-container.fullscreen ul li input:hover {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.2);
+}
+
+@media (max-width: 768px) {
+  #posenet #my-gui-container.fullscreen {
+    width: 60%;
+    margin: 1rem 1rem;
+    right: 1rem;
+  }
+
+  #posenet #canvasvideo {
+    width: 100%;
+    height: 100%;
+  }
+  
+  #posenet #fullscreen i svg {
+    left: 85%;
+  }
+}
+
+#posenet #showcanvas {
+  margin: 0 auto;
+}
+
+#posenet #my-gui-container.fullscreen ul li .c input[type=checkbox]:before {
+  border-color: rgba(255, 255, 255, 0.2);
+}
+
+#posenet #my-gui-container.fullscreen ul li .c input[type=checkbox]:hover::before {
+  border-color: rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.2);
+}
+
+#posenet #my-gui-container.fullscreen ul li select {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  color: rgba(255, 255, 255, 0.6);
+}
+
+#posenet #my-gui-container.fullscreen ul li select:hover,
+#posenet #my-gui-container.fullscreen ul li select:focus {
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.1);
+}
+
+#posenet #my-gui-container.fullscreen .select__arrow {
+  border-color: rgba(255, 255, 255, 0.1) transparent transparent transparent;
+}
+#posenet #my-gui-container.fullscreen ul li select:hover ~ .select__arrow,
+#posenet #my-gui-container.fullscreen ul li select:focus ~ .select__arrow {
+  border-top-color: rgba(255, 255, 255, 0.2);
+}
+#posenet #my-gui-container.fullscreen ul li select:disabled ~ .select__arrow {
+  border-top-color: rgba(255, 255, 255, 0.1);
+}
+
+#posenet ul li .c {
+  display: inline;
+}
+
+#posenet ul li .c input[type=checkbox] {
+  width: 0px !important;
+  cursor: pointer;
+  margin-right: 1rem;
+}
+
+#posenet ul li .c input[type=checkbox]:before {
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  content: "";
+  position: absolute;
+  left: 0;
+  z-index: 1;
+  width: 1rem;
+  height: 1rem;
+  border: 1px solid rgba(255, 111, 97, 0.1);
+  background: transparent;
+  cursor: pointer;
+}
+
+#posenet ul li .c input[type=checkbox]:hover::before {
+  border: 1px solid rgba(255, 111, 97, 0.2);
+  background: rgba(255, 111, 97, 0.2);
+}
+
+#posenet ul li .c input[type=checkbox]:checked:before {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  height: .5rem;
+  border-color: rgba(255, 111, 97, 0.9);
+  border-top-style: none;
+  border-right-style: none;
+}
+#posenet ul li .c input[type=checkbox]:after {
+  content: "";
+  position: absolute;
+  top: -0.125rem;
+  left: 0;
+  width: 1.1rem;
+  height: 1.1rem;
+  background: transparent;
+  cursor: pointer;
+}
+
+
+#posenet ul li .c div {
+  display: inline;
+}
+
+#posenet ul li select {
+  display: inline-block;
+}
+#posenet ul li select {
+  display: inline-block;
+  width: 56px;
+  cursor: pointer;
+  padding: 2px 6px;
+  outline: 0;
+  border: 0;
+  border-radius: 0;
+  border: 1px solid rgba(255, 111, 97, 0.1);
+  background: transparent;
+  color: #333;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+#posenet ul li select::-ms-expand {
+  display: none;
+}
+#posenet ul li select:hover,
+#posenet ul li select:focus {
+  border: 1px solid rgba(255, 111, 97, 0.2);
+  background: rgba(255, 111, 97, 0.1);
+}
+#posenet ul li select:disabled {
+  opacity: 0.5;
+  pointer-events: none;
+}
+.select__arrow {
+  position: absolute;
+  top: 5px;
+  right: 8px;
+  width: 0;
+  height: 0;
+  pointer-events: none;
+  border-style: solid;
+  border-width: 8px 5px 0 5px;
+  border-color: rgba(255, 111, 97, 0.1) transparent transparent transparent;
+}
+#posenet ul li select:hover ~ .select__arrow,
+#posenet ul li select:focus ~ .select__arrow {
+  border-top-color: rgba(255, 111, 97, 0.2);
+}
+#posenet ul li select:disabled ~ .select__arrow {
+  border-top-color: rgba(255, 111, 97, 0.1);
+}
+
+
+@media (max-width: 768px) {
+  #posenet canvas {
+    width: 100%;
+  }
+  #posenet .col {
+    display: block;
+    flex-basis: auto;
+  }
+  .multi {
+    margin-top: 1.3rem;
+  }
+}
+ 
 
 /* 
   color scheme:
