1. Fix #533 construct the modelCDNUrl by modelFile and windows.location 2. Fix #534 display the model size while downloading and in model info page 3. Fix #535 add the link https://webmachinelearning.github.io/webnn/ to WebNN API spec in pages footer 4. Update path 'posenet' to 'skeleton_detection' 5. Update path 'deeplab' to 'semantic_segmentation' 6. Other UI adjustments

--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -197,12 +197,12 @@ section {
   padding: 85px 0;
 }
 
-#posenet section {
+#imageclassification section, #posenet section, #semanticsegmentation section {
   padding: 0px 0;
 }
 
-#model section {
-  padding: 20px 0;
+#index section, #model section {
+  padding: 40px 0 0px 0;
 }
 
 .card {
@@ -856,11 +856,27 @@ footer {
 }
 
 .nav-pills li:hover {
-  background-color: rgba(255, 111, 97, 0.05) !important;
+  background-color: rgba(213, 213, 213, 0.15) !important;
 }
 
 .nav-pills li.active {
   background-color: rgba(213, 213, 213, 0.15);
+}
+
+.nav-pills li a {
+  color: #333;
+}
+
+.nav-pills li a:hover {
+  color: rgba(255, 111, 97, 1.0);
+}
+
+.nav-pills li.active a {
+  color: rgba(255, 111, 97, 0.8);
+}
+
+.nav-pills li.active a:hover {
+  color: rgba(255, 111, 97, 1.0);
 }
 
 .tab-content {
@@ -881,13 +897,33 @@ footer {
 .modelcv tbody td.name {
   text-transform: capitalize;
   min-width: 100px;
+  width: 100px;
+}
+
+.modelcv .format, .modelcv .paper, .modelcv .netron  {
+  width: 60px;
+}
+
+.modelcv .size {
+  width: 77px;
+  text-align: right;
 }
 
 .modelcv th {
   text-align: center;
 }
 
+.modelcv .paper, .modelcv .netron {
+  text-transform: capitalize;
+}
+
 @media (max-width: 768px) {
+  .table td, .table th {
+    padding: .25rem
+  }
+  .modelcv .des {
+    min-width: 94vw;
+  }
 }
 
 .t-filter tr:hover {
@@ -1038,7 +1074,7 @@ footer {
   font-weight: 400;
   text-transform: uppercase;
   font-size: 0.7rem;
-  letter-spacing: 0.2em;
+  letter-spacing: 0.1em;
 }
 
 .webml-title {
@@ -1083,7 +1119,7 @@ footer {
 }
 
 .webml-status-true:hover {
-  background: rgba(255, 111, 97, 0.1);
+  background: rgba(213, 213, 213, 0.15);
 }
 
 #extra {
@@ -1304,6 +1340,9 @@ video.fullscreen, #canvasvideo.fullscreen {
     top: 10rem;
     right: 0rem;
   }
+  .webmlbadge {
+    letter-spacing: 0;
+  }
 }
 
 .video-overlay {
@@ -1439,7 +1478,13 @@ button.xclose {
 
 .loading-page .counter h1 {
   color: rgba(25, 190, 225, 1.0);
-  font-size: 2rem;
+  font-size: 1.4rem;
+}
+
+@media (max-width: 768px) {
+  .loading-page .counter h1 {
+    font-size: 1.2rem;
+  }
 }
 
 .loading-page .counter hr {
@@ -1839,7 +1884,6 @@ button.xclose {
   border-top-color: rgba(255, 111, 97, 0.1);
 }
 
-
 @media (max-width: 768px) {
   #posenet canvas {
     width: 100%;
@@ -1853,6 +1897,160 @@ button.xclose {
   }
 }
  
+#semanticsegmentation #image {
+  display: none;
+}
+
+#semanticsegmentation #canvas {
+  display: block;
+  max-width: 1539px;
+  max-height: 1539px;
+}
+
+@media (max-width: 768px) {
+  #semanticsegmentation #canvas {
+    max-width: 1539px;
+    max-height: 1539px;
+  }
+}
+
+#semanticsegmentation .slidecontainer {
+  margin: 5px 11px;
+  height: 20px;
+  width: 100%;
+}
+#semanticsegmentation .slider {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 1px;
+  border-radius: 1px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+#semanticsegmentation .slider:hover {
+  opacity: 1;
+}
+#semanticsegmentation .slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 1px solid #777;
+  border-radius: 10px;
+  background: #fff;
+  cursor: pointer;
+}
+#semanticsegmentation .slider::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  border: 1px solid #777;
+  border-radius: 10px;
+  background: #fff;
+  cursor: pointer;
+}
+#semanticsegmentation .controls {
+  font-size: 0.8rem;
+}
+#semanticsegmentation .controls .label {
+  width: 100%;
+  margin: 20px 0 8px 0;
+}
+#semanticsegmentation .controls .btn-group {
+  width: 100%;
+  border-radius: 0px;
+}
+#semanticsegmentation .btn {
+  border: 0px;
+  border-bottom: 1px rgba(25, 190, 225, 1.0) solid;
+  background: rgba(255, 255, 255, 1.0) !important;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 0.8rem;
+  letter-spacing: 0.2em;
+  color: #333;
+  font-weight: 200;
+}
+
+#semanticsegmentation .controls .btn-group .btn.active {
+  outline: 0;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  color: rgba(25, 190, 225, 1.0);
+  border: 1px rgba(25, 190, 225, 1.0) solid;
+  background: rgba(255, 255, 255, 0.1) !important;
+}
+
+#semanticsegmentation .controls .btn-group .btn.active:hover {
+  background: rgba(213, 213, 213, 0.15) !important;
+}
+
+#semanticsegmentation .controls .btn:hover {
+  color: rgba(255, 111, 97, 1.0);
+  background: rgba(213, 213, 213, 0.15) !important;
+  border: 1px rgba(255, 111, 97, 1.0) solid;
+}
+
+#semanticsegmentation .controls .btn-group .btn, #semanticsegmentation .btn {
+  width: 24%;
+  border-radius: 0px;
+  padding: 4px;
+  margin: 0.5rem;
+}
+#semanticsegmentation .effects-select label:nth-child(1) {
+  margin-right: 5px;
+}
+#semanticsegmentation .effects-select label:nth-child(2) {
+}
+
+#semanticsegmentation .blur-wrapper,
+#semanticsegmentation .color-picker-wrapper,
+#semanticsegmentation .labels-wrapper,
+#semanticsegmentation .color-map-alpha-wrapper,
+#semanticsegmentation .refine-edge-wrapper,
+#semanticsegmentation .select-bg-wrapper {
+  display: none;
+}
+#semanticsegmentation .controls[data-select="blur"] .blur-wrapper {
+  display: flex;
+}
+#semanticsegmentation .controls[data-select="fill"] .color-picker-wrapper {
+  display: flex;
+}
+#semanticsegmentation .controls[data-select="label"] .labels-wrapper,
+#semanticsegmentation .controls[data-select="label"] .color-map-alpha-wrapper {
+  display: flex;
+}
+#semanticsegmentation .controls:not([data-select="label"]) .refine-edge-wrapper {
+  display: flex;
+}
+#semanticsegmentation .controls[data-select="image"] .select-bg-wrapper {
+  display: flex;
+}
+#semanticsegmentation .labels-wrapper {	
+  margin: 1em 0;	
+  font-size: 14px;	
+}
+#semanticsegmentation .seg-label.highlight {
+  color: #fff;
+  background: rgba(25, 190, 225, 1.0);
+}
+#semanticsegmentation .seg-label span {
+  margin-right: 5px;
+}
+#semanticsegmentation .seg-label {
+  transition: color .1s ease-in, background-color .1s ease-in;
+  padding: 3px 10px 3px 10px;
+  border-radius: 15px;
+  height: 30px;
+  font-variant: small-caps;
+}
+#semanticsegmentation .select-bg-wrapper .btn {
+  width: auto !important;
+}
 
 /* 
   color scheme:
