--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -309,13 +309,13 @@ a:hover {
 
 #header {
   background: rgba(255, 111, 97, 1.0);
-  height: 70px;
+  height: 62px;
   box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 #header #logo {
   font-size: 36px;
-  margin: 14px 25px 0 0;
+  margin: 12px 25px 0 0;
   padding: 2px 0;
   line-height: 1;
   font-family: Helvetica, Arial, sans-serif;
@@ -447,7 +447,7 @@ a:hover {
 }
 
 .nav-menu a {
-  padding: 22px 15px 18px 15px;
+  padding: 20px 15px 18px 15px;
   text-decoration: none;
   display: inline-block;
   color: #fff;
@@ -941,7 +941,7 @@ footer {
 }
 
 .t-filter th {
-  width: 10vw;
+  width: 8vw;
   font-weight: 200;
 }
 
@@ -1043,7 +1043,6 @@ footer {
 
 #ictitle {
   color: rgba(25, 190, 225, 1.0);
-  ;
   text-transform: capitalize;
   font-size: 1.4em;
   letter-spacing: 0.1em;
@@ -1097,8 +1096,8 @@ footer {
 }
 
 .webml-status-false {
-  background: rgba(213, 213, 213, 0.15);
-  border: 1px solid rgba(0, 0, 0, 0.15);
+  background: rgba(213, 213, 213, 0.0);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   display: inline-block;
   padding: 0.2rem 0.4rem;
   margin-left: -6px;
@@ -1106,7 +1105,7 @@ footer {
 }
 
 .webml-status-false:hover {
-  background: rgba(213, 213, 213, 0.3);
+  background: rgba(213, 213, 213, 0.15);
 }
 
 .webml-status-true {
@@ -1226,6 +1225,7 @@ video {
 
 video.fullscreen, #canvasvideo.fullscreen {
   position: fixed;
+  margin: 0 !important;
   left: 0;
   bottom: 0;
   min-width: 100%;
@@ -1234,7 +1234,6 @@ video.fullscreen, #canvasvideo.fullscreen {
   height: auto;
   object-fit: fill;
   z-index: 2999;
-  margin-top: 0;
   border: 0px;
 }
 
@@ -1319,9 +1318,10 @@ video.fullscreen, #canvasvideo.fullscreen {
 
 #posenet #inference.fullscreen {
   background-color: transparent;
-  top: 4rem;
+  top: 4.1rem;
   right: 1rem;
   font-weight: 200;
+  width: 186px;
 }
 
 #my-gui-container.fullscreen {
@@ -1332,6 +1332,7 @@ video.fullscreen, #canvasvideo.fullscreen {
   text-transform: capitalize;
   z-index: 3006;
   color: rgba(255, 255, 255, 0.70);
+  padding: 10px;
 }
 
 @media (max-width: 768px) {
@@ -1616,15 +1617,34 @@ button.xclose {
 }
 
 #posenet #canvasvideo {
-  width: 40%;
-  height: 40%;
+  width: 640px;
+  height: 480px;
   text-align: center;
   margin: 0px auto;
-  margin-top: -1rem;
+  margin-top: -4rem;
+}
+
+#posenet #fps {
+  position: relative;
+  top: -2.4rem;
+  left: 8.5rem;
+  border-radius: 3px;
+  padding: 4px 10px 2px 10px;
+}
+
+#posenet #fps.fullscreen {
+  display: inline-block;
+  position: fixed;
+  left: auto !important;
+  right: 6rem;
+  top: 2rem;
 }
 
 #posenet #fullscreen i svg {
-  left: 66%;
+  top: -0.5rem;
+}
+
+#posenet #fullscreen i.fullscreen svg {
   top: 2.2rem;
 }
 
@@ -1914,8 +1934,20 @@ button.xclose {
   }
 }
 
+#semanticsegmentation #inference {
+  padding: 0 1rem;
+}
+
+#semanticsegmentation .tab-content {
+  margin: 0px auto;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #semanticsegmentation .slidecontainer {
-  margin: 5px 11px;
+  margin: 0 0.5rem;
   height: 20px;
   width: 100%;
 }
@@ -1957,7 +1989,7 @@ button.xclose {
 }
 #semanticsegmentation .controls .label {
   width: 100%;
-  margin: 20px 0 8px 0;
+  margin: 20px 0 8px 0.5rem;
 }
 #semanticsegmentation .controls .btn-group {
   width: 100%;
@@ -1973,6 +2005,40 @@ button.xclose {
   letter-spacing: 0.2em;
   color: #333;
   font-weight: 200;
+}
+
+#semanticsegmentation #inference.fullscreen {
+  padding: 1rem 2rem;
+}
+
+#semanticsegmentation #inference.fullscreen .btn {
+  border: 1px rgba(255, 255, 255, 0.2) solid;
+  background: rgba(255, 255, 255, 0.0) !important;
+  color: rgba(255, 255, 255, 0.7);
+}
+
+#semanticsegmentation #inference.fullscreen .btn:active {
+  color: rgba(25, 190, 225, 0.7);
+  border: 1px rgba(25, 190, 225, 0.4) solid;
+  background: rgba(255, 255, 255, 0.1) !important;
+}
+
+#semanticsegmentation #inference.fullscreen .btn:hover {
+  border: 1px rgba(255, 255, 255, 0.4) solid;
+  background: rgba(255, 255, 255, 0.2) !important;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+#semanticsegmentation #inference.fullscreen .slider {
+  opacity: 0.3;
+}
+#semanticsegmentation #inference.fullscreen .slider:hover {
+  opacity: 0.6;
+}
+
+#semanticsegmentation #inference.fullscreen .seg-label.highlight {
+  color: rgba(255, 255, 255, 0.8);
+  background: rgba(25, 190, 225, 0.4);
 }
 
 #semanticsegmentation .controls .btn-group .btn.active {
@@ -2051,6 +2117,67 @@ button.xclose {
 #semanticsegmentation .select-bg-wrapper .btn {
   width: auto !important;
 }
+
+#semanticsegmentation video {
+  display: none;
+}
+
+#semanticsegmentation #canvasvideo {
+  margin: 0 1rem;
+  max-width: 1539px;
+  max-height: 1539px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2), inset 0 0 1px 0 rgba(255, 255, 255, 1);
+}
+
+#semanticsegmentation #fullscreen {
+  height: 0px;
+}
+
+#semanticsegmentation #fullscreen i svg {
+  left: 80%;
+  top: 1.5rem;
+}
+
+#semanticsegmentation #fullscreen i svg.p224 {
+  left: 76%;
+  top: 0.9rem;
+}
+
+#semanticsegmentation #fullscreen i svg.p257 {
+  top: 1.0rem;
+  left: 78%;
+}
+
+#semanticsegmentation #fullscreen i svg.p321 {
+  left: 80%;
+}
+
+#semanticsegmentation #fullscreen i svg.p513 {
+  left: 87%;
+}
+
+#semanticsegmentation #fps {
+  margin-top: 0.5rem;
+}
+
+#semanticsegmentation #inference.fullscreen #fps {
+  margin-top: -0.5rem;
+}
+
+#semanticsegmentation #inferencetitle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  #semanticsegmentation #canvasvideo {
+    max-width: 1539px;
+    max-height: 1539px;
+  }
+}
+
 
 /* 
   color scheme:
