--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -309,13 +309,13 @@ a:hover {
 
 #header {
   background: rgba(255, 111, 97, 1.0);
-  height: 70px;
+  height: 62px;
   box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.2);
 }
 
 #header #logo {
   font-size: 36px;
-  margin: 14px 25px 0 0;
+  margin: 12px 25px 0 0;
   padding: 2px 0;
   line-height: 1;
   font-family: Helvetica, Arial, sans-serif;
@@ -447,7 +447,7 @@ a:hover {
 }
 
 .nav-menu a {
-  padding: 22px 15px 18px 15px;
+  padding: 20px 15px 18px 15px;
   text-decoration: none;
   display: inline-block;
   color: #fff;
@@ -941,7 +941,7 @@ footer {
 }
 
 .t-filter th {
-  width: 10vw;
+  width: 8vw;
   font-weight: 200;
 }
 
@@ -1617,15 +1617,34 @@ button.xclose {
 }
 
 #posenet #canvasvideo {
-  width: 40%;
-  height: 40%;
+  width: 640px;
+  height: 480px;
   text-align: center;
   margin: 0px auto;
-  margin-top: -1rem;
+  margin-top: -4rem;
+}
+
+#posenet #fps {
+  position: relative;
+  top: -2.4rem;
+  left: 8.5rem;
+  border-radius: 3px;
+  padding: 4px 10px 2px 10px;
+}
+
+#posenet #fps.fullscreen {
+  display: inline-block;
+  position: fixed;
+  left: auto !important;
+  right: 6rem;
+  top: 2rem;
 }
 
 #posenet #fullscreen i svg {
-  left: 65%;
+  top: -0.5rem;
+}
+
+#posenet #fullscreen i.fullscreen svg {
   top: 2.2rem;
 }
 
@@ -1970,7 +1989,7 @@ button.xclose {
 }
 #semanticsegmentation .controls .label {
   width: 100%;
-  margin: 20px 0 8px 0.5rem;
+  margin: 10px 0 8px 0.5rem;
 }
 #semanticsegmentation .controls .btn-group {
   width: 100%;
@@ -2138,8 +2157,28 @@ button.xclose {
   left: 87%;
 }
 
+#semanticsegmentation #inferencetitle {
+  height: 2rem;
+}
+
 #semanticsegmentation #fps {
   margin-top: 0.5rem;
+}
+
+#semanticsegmentation #fps {
+  position: relative;
+  top: -2.3rem;
+  left: 10rem;
+  border-radius: 3px;
+  padding: 4px 10px 2px 10px;
+}
+
+#semanticsegmentation #fps.fullscreen {
+  display: inline-block;
+  position: fixed;
+  left: auto !important;
+  right: 6rem;
+  top: 2rem;
 }
 
 #semanticsegmentation #inference.fullscreen #fps {
