W3C use cases mapping for example list

--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -637,7 +637,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .examples-col {
   display: table;
-  padding-bottom: 45px;
+  padding-bottom: 25px;
 }
 
 .examples-col>div>div {
@@ -668,6 +668,18 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 .examples-col h3 {
   color: rgba(255, 111, 97, 1.0);
+}
+
+.wip {
+  margin-left: 0;
+  color: #fff;
+  background-color: rgba(255, 111, 97, 1.0);
+  padding: 2px 5px 2px 6px;
+  font-size: 0.7rem;
+}
+
+.card p {
+  text-align: left;
 }
 
 .disabled,
