Fix image width issue when width <= 768px

--- a/examples/static/css/style.css
+++ b/examples/static/css/style.css
@@ -2276,7 +2276,7 @@ button.xclose {
 @media (max-width: 768px) {
   
   #objectdetection #canvasshow {
-    max-width: 80vw;
+    max-width: 100%;
   }
 
   #objectdetection #fullscreen i svg {
